// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SDUIRenderer theming matches dark theme snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
  testID="sdui"
>
  <Text
    style={
      [
        {},
        {
          "color": "#FAFAFA",
          "fontFamily": "System",
          "fontSize": 24,
        },
        undefined,
      ]
    }
  >
    Themed Text
  </Text>
  <View
    style={
      [
        {
          "borderRadius": 12,
        },
        {
          "backgroundColor": "#1A1A1A",
          "borderWidth": 0,
          "padding": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {},
          {
            "color": "#FAFAFA",
            "fontFamily": "System",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      Card Content
    </Text>
  </View>
</View>
`;

exports[`SDUIRenderer theming matches light theme snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
  testID="sdui"
>
  <Text
    style={
      [
        {},
        {
          "color": "#1A1A1A",
          "fontFamily": "System",
          "fontSize": 24,
        },
        undefined,
      ]
    }
  >
    Themed Text
  </Text>
  <View
    style={
      [
        {
          "borderRadius": 12,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderWidth": 0,
          "padding": 16,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {},
          {
            "color": "#1A1A1A",
            "fontFamily": "System",
            "fontSize": 16,
          },
          undefined,
        ]
      }
    >
      Card Content
    </Text>
  </View>
</View>
`;
